fix domain group api response swagger definition for lists
